--- a/bin/custom/questionsaddon/acceleratoraddon/web/webroot/_ui/responsive/common/css/questionsaddon.css
+++ b/bin/custom/questionsaddon/acceleratoraddon/web/webroot/_ui/responsive/common/css/questionsaddon.css
@@ -22,3 +22,10 @@
     font-style: italic;
     font-size: revert;
 }
+
+.cmsProductListComponent_discussionImage{
+    max-block-size: 25px;
+    margin-top: 8px;
+    position: absolute;
+    right: 18px;
+}
